--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Auraly ",
   "short_name": "Auraly",
   "description": "A music platform for every music lover",
-  "start_url": "/search.html",
+  "start_url": "./search.html",
   "display": "standalone",
   "background_color": "#EEE0CA",
   "theme_color": "#EEE0CA",
@@ -18,4 +18,4 @@
       "type": "image/svg+xml"
     }
   ]
-} 
+}
